--- a/ncmpcpp/config
+++ b/ncmpcpp/config
@@ -14,8 +14,8 @@ visualizer_type = spectrum
 song_list_format = {%a - }{%t}|{$8%f$9}$R{$3(%l)$9}
 song_status_format = {{%a{ "%b"{ (%y)}} - }{%t}}|{%f}
 song_library_format = {%n - }{%t}|{%f}
-alternative_header_first_line_format = $b$1$aqqu$/a$9 {%t}|{%f} $1$atqq$/a$9$/b
-alternative_header_second_line_format = {{$4$b%a$/b$9}{ - $7%b$9}{ ($4%y$9)}}|{%D}
+alternative_header_first_line_format = $b$1$aqqu$/a$8 {%t}|{%f} $1$atqq$/a$9$/b
+alternative_header_second_line_format = {{$7$b%a$/b$9}{ - $6%b$9}{ ($4%y$9)}}|{%D}
 now_playing_prefix = $b$6    >>>$9
 now_playing_suffix = $/b
 browser_playlist_prefix = "$2playlist$9 "
@@ -26,7 +26,7 @@ song_window_title_format = {%a - }{%t}|{%f}
 browser_sort_mode = name
 #browser_sort_format = {%a - }{%t}|{%f} {(%l)}
 
-song_columns_list_format = (25)[cyan]{ar} (45)[white]{t|f:Title} (20)[cyan]{b} (10f)[magenta]{l}
+song_columns_list_format = (25)[cyan]{ar} (45)[white]{t|f:Title} (20)[magenta]{b} (10f)[white]{l}
 
 execute_on_song_change = ""
 playlist_show_mpd_host = no
@@ -44,9 +44,10 @@ volume_change_step = 2
 autocenter_mode = no
 centered_cursor = yes
 progressbar_look = ———
+#progressbar_look = ———
 progressbar_boldness = yes
 default_place_to_search_in = database
-user_interface = classic
+user_interface = alternative
 data_fetching_delay = yes
 media_library_primary_tag = genre
 default_find_mode = wrapped
@@ -65,7 +66,7 @@ startup_screen = playlist
 #startup_slave_screen = "visualizer"
 #
 #startup_slave_screen_focus = no
-ask_before_clearing_playlists = no
+ask_before_clearing_playlists = yes
 clock_display_seconds = yes
 #display_remaining_time = no
 ignore_leading_the = yes
