--- a/tmux.conf
+++ b/tmux.conf
@@ -27,6 +27,16 @@ bind -n M-j select-pane -D
 bind -n M-l select-pane -R
 bind -n M-k select-pane -U
 
+# Smart pane switching with awareness of Vim splits.
+# See: https://github.com/christoomey/vim-tmux-navigator
+is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
+    | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
+bind-key -n C-h if-shell "$is_vim" "send-keys C-h"  "select-pane -L"
+bind-key -n C-j if-shell "$is_vim" "send-keys C-j"  "select-pane -D"
+bind-key -n C-k if-shell "$is_vim" "send-keys C-k"  "select-pane -U"
+bind-key -n C-l if-shell "$is_vim" "send-keys C-l"  "select-pane -R"
+bind-key -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
+
 # Vim style paneresizer
 bind M-h resize-pane -L 7 
 bind M-j resize-pane -D 7
@@ -74,7 +84,7 @@ set -ga terminal-overrides ",xterm-256color:Tc"
 
 # Statusline
 set-option -g status-justify centre
-set-option -g status-style "fg=colour15"
+set-option -g status-style "fg=colour08"
 set-option -g status-interval 1
 set-option -g status-left-length 256
 set-option -g status-right-length 256
