--- a/ncmpcpp/config
+++ b/ncmpcpp/config
@@ -16,7 +16,7 @@ song_status_format = {{%a{ "%b"{ (%y)}} - }{%t}}|{%f}
 song_library_format = {%n - }{%t}|{%f}
 alternative_header_first_line_format = $b$1$aqqu$/a$8 {%t}|{%f} $1$atqq$/a$9$/b
 alternative_header_second_line_format = {{$7$b%a$/b$9}{ - $6%b$9}{ ($4%y$9)}}|{%D}
-now_playing_prefix = $b$6    >>>$9
+/* now_playing_prefix = $b$6>>>$9 */
 now_playing_suffix = $/b
 browser_playlist_prefix = "$2playlist$9 "
 selected_item_prefix = $6
