--- a/nitrogen/bg-saved.cfg
+++ b/nitrogen/bg-saved.cfg
@@ -1,4 +1,4 @@
 [xin_-1]
-file=/home/andreas/Dropbox/Pictures/ra6vbivis2y-thomas-tixtaaz.jpg
-mode=5
+file=/home/andreas/Dropbox/Wallpaper/comf/03 - ZdNiqLg.jpg
+mode=0
 bgcolor=#000000
