--- a/tmux.conf
+++ b/tmux.conf
@@ -6,6 +6,7 @@ set-option -g prefix M-a
 unbind-key C-b
 unbind-key C-o
 unbind-key M-o
+unbind-key d
 bind-key M-a send-prefix
 set-window-option -g mode-keys vi
 
