--- a/termite/config
+++ b/termite/config
@@ -18,13 +18,13 @@
 # font = FuraMonoForPowerline Nerd Font 11
 # font = Iosevka Nerd Font 14
 # font = Monaco for Powerline 11
-# font = Roboto Mono for Powerline 11
+font = Roboto Mono for Powerline 11
 # font = Ubuntu Mono derivative Powerline 13
 # font = Hack 12
 # font = Anonymice Powerline 14
 # font = Sauce Code Powerline 12
 # font = FantasqueSansMono Nerd Font 14
-font = Liberation Mono for Powerline 12
+# font = Liberation Mono for Powerline 12
 # font = Cousine for Powerline 12
 # font = MesloLGS Nerd Font 12
 # font = DejaVu Sans Mono for Powerline 12
